# ss

./: .gitignore  ConvertPure11ToVS2015.vbs  Makefile  compilerHelper.bat  psc-package.json  purs.bat  readme.txt
compilerHelper/: README.md  Setup.hs  compilerHelper.cabal
compilerHelper/src/: Main.hs
genCpp/: dictionary.h
genCpp/Control_Alt/: Control_Alt.h
genCpp/Control_Applicative/: Control_Applicative.cpp
genCpp/Control_Biapplicative/: Control_Biapplicative.h
genCpp/Control_Biapply/: Control_Biapply.cpp
genCpp/Control_Comonad/: Control_Comonad.h
genCpp/Control_Comonad_Env/: Control_Comonad_Env.h
genCpp/Control_Comonad_Env_Class/: Control_Comonad_Env_Class.cpp
genCpp/Control_Comonad_Env_Trans/: Control_Comonad_Env_Trans.h
genCpp/Control_Comonad_Store/: Control_Comonad_Store.cpp
genCpp/Control_Comonad_Store_Class/: Control_Comonad_Store_Class.cpp  Control_Comonad_Store_Class.h
genCpp/Control_Comonad_Store_Trans/: Control_Comonad_Store_Trans.cpp
genCpp/Control_Comonad_Traced_Class/: Control_Comonad_Traced_Class.cpp  Control_Comonad_Traced_Class.h
genCpp/Control_Comonad_Traced_Trans/: Control_Comonad_Traced_Trans.cpp  Control_Comonad_Traced_Trans.h
genCpp/Control_Comonad_Trans_Class/: Control_Comonad_Trans_Class.cpp
genCpp/Control_Extend/: Control_Extend.cpp  Control_Extend.h
genCpp/Control_Lazy/: Control_Lazy.h
genCpp/Control_MonadPlus/: Control_MonadPlus.h
genCpp/Control_Monad_Cont/: Control_Monad_Cont.cpp  Control_Monad_Cont.h
genCpp/Control_Monad_RWS/: Control_Monad_RWS.h  (+1 more)
juce/: juceProject.jucer
src/: Main.back  Main.purs
(+928 files in other folders)
