name:                compilerHelper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/compilerHelper#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  README.md

executable compilerHelper
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,directory
                      ,filepath
                      ,directory-tree
                      ,mtl
                      ,process


custom-setup
  setup-depends:
    base
    ,Cabal
    ,directory
    ,filepath
    ,process

